Fix: map z-index update

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -778,6 +778,7 @@ footer .footer-bottom {
             /* The height is 400 pixels */
             width: 100vw;
             /* The width is the width of the web page */
+            z-index:999;
         }
     }
 
